    - Added Corrupted Memento to scenario tracker in heroic vision
    - Rebuilt health globe for performance and graphical improvement
    - Rebuilt dodge bar for performance and graphical improvement
    - Dodge bar now works as a secure button and can be bound to a key
    - Added option for range indicator on mainbar


5.2.3

FIXES
    - Mechagnomes should now display the same as base race in hero panel
    

5.2.2

NEW
    - Add Corruption border to the inventory
    - Add option to show target auras on top
    - Add option to move player auras

FIXES
    - Add upgrade warning for higher tier cloak orbs


5.2.1

NEW
    - Add Rajani & Uldum Accord rep graphics

FIXES
    - Fix immersive camera for King Phaoris
    - Add warning to unequip cloak to upgrade instead of throwing an error (temp fix)


5.2.0

NEW
    - Added X and Y offset for tooltip if anchor is set to cursor
    - Update for 8.3
    - Added healthprediction to target, target of target, focus and target of focus frame
    - Added healthprediction to healthglobe
    - Added option to set Actionbar fade per Actionbar (Show always, show in combat, show only on mouse over)


5.1.15

NEW
    - Added aggroborder to partyframes
    - Added option the set the Stancebar to the left or right of the Actionbar
    - Added more Battleground HUD's
    - Enhanced durability icon at hero panel 
    - Added timer to scenarios like Chromie

MISCELLANEOUS
    - Settings: Checkboxes now also toggle if click on the text

FIXES
    - Classpowerbar now changes if spec changed
    - If minimap is on top now all icons on the minimap are accessable


5.1.14

NEW
    - Added possibly to show more then one WQ
    - Added possibly to track WQ's
    - Added new skins

FIXES
    - Fix chatframe moving and resizing error


5.1.13

FIXES
    - Fix a loading error when action bars are disabled

5.1.12

NEW
    - Added new skins
    - Added heal prediction to party frames
    - Added casttime to target castbar

5.1.11

NEW