@@ -43,6 +43,9 @@ GW_DEFAULT["HUD_SPELL_SWAP"] = true
 
 GW_DEFAULT["BAG_ITEM_SIZE"] = 40
 
+GW_DEFAULT["PLAYER_UNIT_HEALTH"] = "VALUE"
+GW_DEFAULT["PLAYER_UNIT_ABSORB"] = "VALUE"
+
 GW_DEFAULT["BAG_WIDTH"] = 480
 GW_DEFAULT["BAG_REVERSE_SORT"] = true
 GW_DEFAULT["BAG_ITEM_BORDER_HIDE"] = true
