@@ -116,68 +116,68 @@
                 <Layers>
                     <Layer level="OVERLAY">
                         <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="-1" y="0"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="-1" y="-3"></Anchor>
                             </Anchors>
                         </FontString>
                         <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="-1"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="-4"></Anchor>
                             </Anchors>
                         </FontString>
                         <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="1" y="0"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="1" y="-3"></Anchor>
                             </Anchors>
                         </FontString>
                         <FontString text="100,000" fontColor="white" inherits="GameFontNormalSmall" parentArray="shadow" justifyH="CENTER">
-                            <Size x="102" y="25"/>
-                            <Color r="1" b="1" g="1"></Color>
-                            <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="1"></Anchor>
-                            </Anchors>
-                        </FontString>
-                        <FontString text="100,000" fontColor="white" inherits="GameFontNormalSmall" parentArray="shadow" justifyH="CENTER">
-                            <Size x="102" y="25"/>
-                            <Color r="1" b="1" g="1"></Color>
-                            <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="-2" y="0"></Anchor>
-                            </Anchors>
-                        </FontString>
-                        <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
                                 <Anchor point="CENTER" relativePoint="CENTER" x="0" y="-2"></Anchor>
                             </Anchors>
                         </FontString>
-                        <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                        <FontString text="100,000" fontColor="white" inherits="GameFontNormalSmall" parentArray="shadow" justifyH="CENTER">
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="2" y="0"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="-2" y="-3"></Anchor>
                             </Anchors>
                         </FontString>
                         <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="2"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="-5"></Anchor>
+                            </Anchors>
+                        </FontString>
+                        <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
+                            <Size x="102" y="50"/>
+                            <Color r="1" b="1" g="1"></Color>
+                            <Anchors>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="2" y="-3"></Anchor>
+                            </Anchors>
+                        </FontString>
+                        <FontString parentArray="shadow" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
+                            <Size x="102" y="50"/>
+                            <Color r="1" b="1" g="1"></Color>
+                            <Anchors>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="0" y="-1"></Anchor>
                             </Anchors>
                         </FontString>
                     </Layer>
                     <Layer textureSubLevel="2" level="OVERLAY">
                         <FontString parentKey="value" text="100,000" fontColor="white" inherits="GameFontNormalSmall" justifyH="CENTER">
-                            <Size x="102" y="25"/>
+                            <Size x="102" y="50"/>
                             <Color r="1" b="1" g="1"></Color>
                             <Anchors>
-                                <Anchor point="CENTER" relativePoint="CENTER" x="" y="0"></Anchor>
+                                <Anchor point="CENTER" relativePoint="CENTER" x="" y="-3"></Anchor>
                             </Anchors>
                         </FontString>
 
